[package]
name = "silhouette"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "cli"

[[bin]]
name = "cli"
path = "src/bin/main.rs"

[dependencies]
bigdecimal = { version = "0.4.9", features = ["serde-json"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
